* XXX XXX XX XXXX XX:XX:XX +0000 @email@ @version@-@version@%{?dist}
- 27/12/2024
01. envdir.c, envuidgid.c: Ignore return value of pathexec()
02. setuidgid.c: Set HOME, USER, LOGNAME env variable
- 29/12/2024
03. setuidgid.c: added -e option for setting USER, LOGNAME and HOME env
variables
- 03/01/2025
04. installer.c: fixed link, char/block device creation.

* Tue Dec 24 2024 20:28:14 +0000 Manvendra Bhangui <daemontools@indimail.org 1.1.6-1.1%{?dist}
Release 1.1.6-1.1 Start 13/08/2024 End 24/12/2024
- 13/08/2024
01. svps: fix for pid file not found if svscan is not configured for /service
02. supervise.c: pass additional "startup type" argument to ./run
- 29/08/2024
03. supervise.c: use service dir as first argument for ./run, ./alert and
   ./shutdown
04. svps: use .svscan.pid from service directory of each svscan instance
- 10/10/2024
05. runpod.sh: set systemd only if not set
- 24/10/2024
06. svc.c: added -w option to wait for service to be up
07. supervise.c: BUG: status file truncated before announce
08. svc.c: added -W option to wait for service to be down
09. svc.c: added -T timeout option for -w, -W options
10. supervise.c: open supervise/dn fifo in read mode after service goes down
11. svscan.c, supervise.c: renamed SERVICEDIR to SCANDIR
12. svscan.c: set PPID in main() to eliminate memory allocation failure in
    child
- 26/10/2024
13. svscan.c: make max number of services configurable
- 05/09/2024
14. minisvc: umount resolv.conf only when UNSHARE variable is set and
   /etc/indimail/resolv.conf exists
15. supervise.c: execute shutdown script on SIGTERM
16. supervise.c: terminate on single SIGTERM instead of the earlier two for logger
17. supervise.c: prevent restart of service on SIGTERM
18. svscan.c: added killsvc function to shutdown non-log and log services
19. svscan.c: refactored shutdown handling
- 12/11/2024
20. daemontools.spec, debian/control: use libqmail-devel > 1.3 for
    pathexec_env_plus() function in libqmail